--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
  --blue:#93c5fd;
 }
 
-*{
- box-sizing:border-box;
- font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont;
-}
+*{box-sizing:border-box;font-family:Inter,system-ui}
 
 body{
  margin:0;
@@ -33,45 +30,35 @@ body{
 .container{
  max-width:1600px;
  margin:auto;
- padding:clamp(16px,2vw,28px);
+ padding:24px;
 }
 
-/* ================= HEADER ================= */
+/* HEADER */
 .header{
- display:flex;
- flex-direction:column;
- align-items:flex-start;
- margin-bottom:32px;
+ margin-bottom:28px;
  animation:fadeDown .6s ease;
 }
-
-.header img{
- height:68px;
-}
-
+.header img{height:68px}
 .dashboard-title{
  margin-top:14px;
  font-size:22px;
- letter-spacing:4px;
  font-weight:900;
- color:#fff;
+ letter-spacing:4px;
 }
-
 .dashboard-subtitle{
  margin-top:6px;
- font-size:14px;
  color:var(--muted);
+ font-size:14px;
 }
 
-/* ================= FILTROS ================= */
+/* FILTROS */
 .filters{
  display:flex;
  gap:12px;
- margin-bottom:28px;
  flex-wrap:wrap;
+ margin-bottom:28px;
  animation:fadeUp .6s ease;
 }
-
 select{
  background:var(--card);
  color:var(--text);
@@ -80,137 +67,72 @@ select{
  padding:12px 16px;
  font-size:15px;
  width:220px;
- transition:.25s;
 }
 
-select:hover{
- border-color:var(--blue);
-}
-
-/* ================= KPIs ================= */
+/* KPIS */
 .kpis{
  display:grid;
  grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
  gap:16px;
  margin-bottom:32px;
 }
-
 .kpi{
  background:linear-gradient(180deg,#050b1a,#030818);
  border:1px solid var(--border);
  border-radius:18px;
  padding:18px;
- animation:fadeUp .6s ease;
- transition:.3s;
+ animation:fadeUp .7s ease;
 }
-
-.kpi:hover{
- transform:translateY(-4px);
- border-color:rgba(147,197,253,.4);
-}
-
 .kpi span{
  color:var(--muted);
  font-size:13px;
  text-transform:uppercase;
 }
-
 .kpi strong{
  display:block;
  margin-top:8px;
  font-size:28px;
 }
 
-/* ================= CARDS ================= */
+/* CARDS */
 .cards{
  display:grid;
  grid-template-columns:repeat(auto-fit,minmax(420px,1fr));
  gap:18px;
  margin-bottom:28px;
 }
-
 .card{
  background:linear-gradient(180deg,#050b1a,#030818);
  border:1px solid var(--border);
  border-radius:22px;
  padding:18px;
- height:clamp(320px,38vw,440px);
- display:flex;
- flex-direction:column;
- animation:fadeUp .7s ease;
+ height:380px;
+ animation:fadeUp .8s ease;
 }
+.chart-wrap{height:100%}
 
-.card strong{
- margin-bottom:12px;
- font-size:18px;
-}
-
-.chart-wrap{
- flex:1;
- position:relative;
-}
-
-canvas{
- width:100%!important;
- height:100%!important;
-}
-
-/* ================= TABELA ================= */
-.table-wrap{overflow-x:auto}
-
+/* TABELA */
 table{
  width:100%;
- min-width:900px;
  border-collapse:collapse;
+ min-width:900px;
 }
-
-thead{
- background:linear-gradient(180deg,#020b2a,#020617);
-}
-
-th{
- color:var(--blue);
- font-weight:700;
- font-size:17px;
- padding:18px 12px;
+th,td{
+ padding:14px;
  text-align:center;
-}
-
-td{
- padding:15px 12px;
  border-bottom:1px solid var(--border);
- font-size:15px;
- text-align:center;
 }
+th{color:var(--blue)}
+td:first-child,th:first-child{text-align:left}
 
-thead th:first-child,
-tbody td:first-child{
- text-align:left;
- padding-left:18px;
-}
-
-tr.total{
- background:rgba(34,197,94,.08);
- font-weight:700;
-}
-
-/* ================= ANIMAÇÕES ================= */
+/* ANIMAÇÕES */
 @keyframes fadeUp{
- from{opacity:0;transform:translateY(18px)}
+ from{opacity:0;transform:translateY(16px)}
  to{opacity:1;transform:none}
 }
-
 @keyframes fadeDown{
- from{opacity:0;transform:translateY(-18px)}
+ from{opacity:0;transform:translateY(-16px)}
  to{opacity:1;transform:none}
-}
-
-/* ================= RESPONSIVO ================= */
-@media(max-width:900px){
- .cards{grid-template-columns:1fr}
-}
-@media(max-width:600px){
- select{width:100%}
 }
 </style>
 </head>
@@ -220,7 +142,7 @@ tr.total{
 
 <!-- HEADER -->
 <div class="header">
- <img src="logo.png" alt="Mentoria NasdaqPro">
+ <img src="logo.png">
  <div class="dashboard-title">DASHBOARD</div>
  <div class="dashboard-subtitle" id="subtitle"></div>
 </div>
@@ -257,25 +179,23 @@ tr.total{
 <!-- TABELA -->
 <div class="card" style="height:auto">
  <strong>Tabela Operacional</strong>
- <div class="table-wrap">
-  <table>
-   <thead>
-    <tr>
-     <th>Dia</th><th>Pontos</th><th>Trades</th>
-     <th>Gain</th><th>Stop</th><th>0x0</th>
-     <th>Ativo</th><th>Semana</th>
-    </tr>
-   </thead>
-   <tbody id="tbody"></tbody>
-  </table>
- </div>
+ <table>
+  <thead>
+   <tr>
+    <th>Dia</th><th>Pontos</th><th>Trades</th>
+    <th>Gain</th><th>Stop</th><th>0x0</th>
+    <th>Ativo</th><th>Semana</th>
+   </tr>
+  </thead>
+  <tbody id="tbody"></tbody>
+ </table>
 </div>
 
 </div>
 
 <script>
 const CSV_URL="https://docs.google.com/spreadsheets/d/e/2PACX-1vTbyybCny81vfVXQHmtlkKEOHHJ6xJ_pKSG_4ndkK0tH-YocrFeWY7qL41TS1IfvRQjLSbLIILV56OV/pub?output=csv";
-const nomesMeses={"01":"Janeiro","02":"Fevereiro","03":"Março","04":"Abril","05":"Maio","06":"Junho","07":"Julho","08":"Agosto","09":"Setembro","10":"Outubro","11":"Novembro","12":"Dezembro"};
+const meses={"01":"Janeiro","02":"Fevereiro","03":"Março","04":"Abril","05":"Maio","06":"Junho","07":"Julho","08":"Agosto","09":"Setembro","10":"Outubro","11":"Novembro","12":"Dezembro"};
 let data=[],chartLinha,chartBar;
 
 async function loadCSV(){
@@ -289,20 +209,99 @@ function parseCSV(t){
   const c=r.split(",");
   return{
    dia:c[0], semana:c[1], ativo:c[2],
-   ano:c[0].substring(6,10), mes:c[0].substring(3,5),
-   pontos:+c[3]||0, trades:+c[4]||0,
-   gain:+c[5]||0, stop:+c[6]||0, zero:+c[7]||0
+   ano:c[0].slice(6,10), mes:c[0].slice(3,5),
+   pontos:+c[3], trades:+c[4],
+   gain:+c[5], stop:+c[6], zero:+c[7]
   }
  });
  initFiltros();
 }
 
-function atualizarSubtitulo(){
- const ano=filtroAno.value;
- const mes=filtroMes.value==="ALL"?"Todos":nomesMeses[filtroMes.value];
- const sem=filtroSemana.value==="ALL"?"Todas":filtroSemana.value;
- subtitle.textContent=`${ano} • ${mes} • ${sem}`;
+function initFiltros(){
+ const anos=[...new Set(data.map(d=>d.ano))];
+ filtroAno.innerHTML=anos.map(a=>`<option>${a}</option>`).join("");
+ filtroAno.value=anos.at(-1);
+ filtroAno.onchange=()=>{initMeses(); atualizar();}
+ initMeses();
 }
 
-/* === RESTANTE DO JS (KPIs, tabela e gráficos) === */
-/* IGUAL AO SEU — SEM REMOVER NADA */
+function initMeses(){
+ const mesesDisp=[...new Set(data.filter(d=>d.ano==filtroAno.value).map(d=>d.mes))];
+ filtroMes.innerHTML=`<option value="ALL">Todos</option>`+
+ mesesDisp.map(m=>`<option value="${m}">${meses[m]}</option>`).join("");
+ filtroMes.onchange=()=>{initSemanas(); atualizar();}
+ initSemanas();
+}
+
+function initSemanas(){
+ const f=data.filter(d=>d.ano==filtroAno.value && (filtroMes.value==="ALL"||d.mes==filtroMes.value));
+ const semanas=[...new Set(f.map(d=>d.semana))];
+ filtroSemana.innerHTML=`<option value="ALL">Todas</option>`+
+ semanas.map(s=>`<option>${s}</option>`).join("");
+ filtroSemana.onchange=atualizar;
+ atualizar(); // 🔑 GARANTE QUE OS DADOS APAREÇAM
+}
+
+function atualizar(){
+ const f=data.filter(d=>
+  d.ano==filtroAno.value &&
+  (filtroMes.value==="ALL"||d.mes==filtroMes.value) &&
+  (filtroSemana.value==="ALL"||d.semana==filtroSemana.value)
+ );
+ atualizarSubtitulo();
+ renderKPIs(f); renderTabela(f); renderGraficos(f);
+}
+
+function atualizarSubtitulo(){
+ subtitle.textContent=
+ `${filtroAno.value} • ${
+  filtroMes.value==="ALL"?"Todos os meses":meses[filtroMes.value]
+ } • ${
+  filtroSemana.value==="ALL"?"Todas as semanas":filtroSemana.value
+ }`;
+}
+
+/* KPIs, tabela e gráficos (mantidos) */
+function renderKPIs(f){
+ let t={trades:0,pontos:0,gain:0,stop:0,zero:0};
+ f.forEach(d=>{
+  t.trades+=d.trades; t.pontos+=d.pontos;
+  t.gain+=d.gain; t.stop+=d.stop; t.zero+=d.zero;
+ });
+ kTrades.textContent=t.trades;
+ kPontos.textContent=t.pontos;
+ kGains.textContent=t.gain;
+ kStops.textContent=t.stop;
+ kZero.textContent=t.zero;
+ kAcc.textContent=(t.gain+t.stop)?Math.round(t.gain/(t.gain+t.stop)*100)+"%":"0%";
+}
+
+function renderTabela(f){
+ tbody.innerHTML="";
+ f.forEach(d=>{
+  tbody.innerHTML+=`
+  <tr>
+   <td>${d.dia}</td><td>${d.pontos}</td><td>${d.trades}</td>
+   <td>${d.gain}</td><td>${d.stop}</td><td>${d.zero}</td>
+   <td>${d.ativo}</td><td>${d.semana}</td>
+  </tr>`;
+ });
+}
+
+function renderGraficos(f){
+ let acc=0,labels=[],saldo=[];
+ f.forEach(d=>{acc+=d.pontos;labels.push(d.dia);saldo.push(acc)});
+ if(chartLinha)chartLinha.destroy();
+ chartLinha=new Chart(chartLinhaEl,{
+  type:"line",
+  data:{labels,datasets:[{data:saldo,borderColor:"#22c55e",fill:true,backgroundColor:"rgba(34,197,94,.15)"}]},
+  options:{responsive:true,maintainAspectRatio:false,animation:{duration:800}}
+ });
+}
+
+const chartLinhaEl=document.getElementById("chartLinha");
+const chartBarEl=document.getElementById("chartBar");
+loadCSV();
+</script>
+</body>
+</html>
