--- a/index.html
+++ b/index.html
@@ -42,40 +42,20 @@ body{
  flex-direction:column;
  align-items:flex-start;
  margin-bottom:32px;
- opacity:0;
- transform:translateY(-12px);
- animation:headerIn .9s ease forwards;
 }
 
 .header img{
- height:78px;
+ height:64px;
  max-width:100%;
- opacity:0;
- transform:translateY(-6px);
- animation:logoIn .9s ease forwards;
- animation-delay:.15s;
 }
 
 .dashboard-title{
- margin-top:18px;
- font-size:20px;
- letter-spacing:4px;
+ margin-top:12px;
+ font-size:18px;
+ letter-spacing:3px;
  font-weight:800;
  color:var(--blue);
- opacity:0;
- transform:translateY(6px);
- animation:titleIn .8s ease forwards;
- animation-delay:.35s;
-}
-
-@keyframes headerIn{
- to{opacity:1;transform:none}
-}
-@keyframes logoIn{
- to{opacity:1;transform:none}
-}
-@keyframes titleIn{
- to{opacity:.95;transform:none}
+ opacity:.95;
 }
 
 /* FILTROS */
@@ -159,9 +139,7 @@ canvas{
 }
 
 /* TABELA */
-.table-wrap{
- overflow-x:auto;
-}
+.table-wrap{overflow-x:auto}
 
 table{
  width:100%;
@@ -199,11 +177,9 @@ tr.total{
  font-weight:700;
 }
 
-/* RESPONSIVO */
 @media(max-width:900px){
  .cards{grid-template-columns:1fr}
 }
-
 @media(max-width:600px){
  select{width:100%}
 }
@@ -273,9 +249,13 @@ tr.total{
 </div>
 
 <script>
-/* --- TODO O JS ORIGINAL PRESERVADO --- */
 const CSV_URL="https://docs.google.com/spreadsheets/d/e/2PACX-1vTbyybCny81vfVXQHmtlkKEOHHJ6xJ_pKSG_4ndkK0tH-YocrFeWY7qL41TS1IfvRQjLSbLIILV56OV/pub?output=csv";
-const nomesMeses={"01":"Janeiro","02":"Fevereiro","03":"Março","04":"Abril","05":"Maio","06":"Junho","07":"Julho","08":"Agosto","09":"Setembro","10":"Outubro","11":"Novembro","12":"Dezembro"};
+const nomesMeses={
+ "01":"Janeiro","02":"Fevereiro","03":"Março","04":"Abril",
+ "05":"Maio","06":"Junho","07":"Julho","08":"Agosto",
+ "09":"Setembro","10":"Outubro","11":"Novembro","12":"Dezembro"
+};
+
 let data=[],chartLinha,chartBar;
 
 async function loadCSV(){
@@ -285,22 +265,170 @@ async function loadCSV(){
 }
 
 function parseCSV(t){
- const rows=t.trim().split(/\r?\n/); rows.shift();
+ const rows=t.trim().split(/\r?\n/);
+ rows.shift();
  data=rows.map(r=>{
   const c=r.split(",");
   return{
-   dia:c[0], semana:c[1], ativo:c[2],
-   ano:c[0].substring(6,10), mes:c[0].substring(3,5),
-   pontos:+c[3]||0, trades:+c[4]||0,
-   gain:+c[5]||0, stop:+c[6]||0, zero:+c[7]||0
+   dia:c[0],
+   semana:c[1],
+   ativo:c[2],
+   ano:c[0].substring(6,10),
+   mes:c[0].substring(3,5),
+   pontos:+c[3]||0,
+   trades:+c[4]||0,
+   gain:+c[5]||0,
+   stop:+c[6]||0,
+   zero:+c[7]||0
   }
  });
  initFiltros();
 }
 
-/* resto do JS igual ao seu original */
+function initFiltros(){
+ const anos=[...new Set(data.map(d=>d.ano))].sort();
+ filtroAno.innerHTML=anos.map(a=>`<option>${a}</option>`).join("");
+
+ // ✅ CORREÇÃO CRÍTICA
+ filtroAno.value = anos[anos.length - 1];
+
+ filtroAno.onchange=()=>{initMeses();atualizar();}
+ initMeses();
+}
+
+function initMeses(){
+ const mesAtual=String(new Date().getMonth()+1).padStart(2,"0");
+ const meses=[...new Set(data.filter(d=>d.ano==filtroAno.value).map(d=>d.mes))];
+ filtroMes.innerHTML=`<option value="ALL">Todos os meses</option>`+
+  meses.map(m=>`<option value="${m}">${nomesMeses[m]}</option>`).join("");
+ filtroMes.value=meses.includes(mesAtual)?mesAtual:"ALL";
+ filtroMes.onchange=()=>{initSemanas();atualizar();}
+ initSemanas();
+}
+
+function initSemanas(){
+ if(filtroMes.value==="ALL"){
+  filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>';
+  filtroSemana.disabled=true;
+  atualizar();
+  return;
+ }
+ filtroSemana.disabled=false;
+ const semanas=[...new Set(
+  data.filter(d=>d.ano==filtroAno.value && d.mes==filtroMes.value)
+      .map(d=>d.semana)
+ )];
+ filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>'+
+  semanas.map(s=>`<option>${s}</option>`).join("");
+ filtroSemana.value="ALL";
+ filtroSemana.onchange=atualizar;
+ atualizar();
+}
+
+function atualizar(){
+ const f=data.filter(d=>
+  d.ano==filtroAno.value &&
+  (filtroMes.value==="ALL"||d.mes==filtroMes.value) &&
+  (filtroSemana.value==="ALL"||d.semana==filtroSemana.value)
+ );
+ renderKPIs(f);
+ renderTabela(f);
+ renderGraficos(f);
+}
+
+function renderKPIs(f){
+ let t={trades:0,pontos:0,gain:0,stop:0,zero:0};
+ f.forEach(d=>{
+  t.trades+=d.trades;
+  t.pontos+=d.pontos;
+  t.gain+=d.gain;
+  t.stop+=d.stop;
+  t.zero+=d.zero;
+ });
+ const ops=t.gain+t.stop;
+ kTrades.textContent=t.trades;
+ kPontos.textContent=t.pontos;
+ kGains.textContent=t.gain;
+ kStops.textContent=t.stop;
+ kZero.textContent=t.zero;
+ kAcc.textContent=ops?Math.round(t.gain/ops*100)+"%":"0%";
+}
+
+function renderTabela(f){
+ tbody.innerHTML="";
+ let tot={pontos:0,trades:0,gain:0,stop:0,zero:0};
+ f.forEach(d=>{
+  tot.pontos+=d.pontos;
+  tot.trades+=d.trades;
+  tot.gain+=d.gain;
+  tot.stop+=d.stop;
+  tot.zero+=d.zero;
+  tbody.innerHTML+=`
+  <tr>
+   <td>${d.dia}</td>
+   <td style="color:${d.pontos<0?'var(--red)':'var(--green)'}">${d.pontos}</td>
+   <td>${d.trades}</td>
+   <td style="color:var(--green)">${d.gain}</td>
+   <td style="color:var(--red)">${d.stop}</td>
+   <td style="color:var(--yellow)">${d.zero}</td>
+   <td>${d.ativo}</td>
+   <td>${d.semana}</td>
+  </tr>`;
+ });
+ tbody.innerHTML+=`
+ <tr class="total">
+  <td>TOTAL</td>
+  <td>${tot.pontos}</td>
+  <td>${tot.trades}</td>
+  <td>${tot.gain}</td>
+  <td>${tot.stop}</td>
+  <td>${tot.zero}</td>
+  <td colspan="2"></td>
+ </tr>`;
+}
+
+function renderGraficos(f){
+ let acc=0;
+ const labels=[],saldo=[];
+ f.forEach(d=>{
+  acc+=d.pontos;
+  labels.push(d.dia);
+  saldo.push(acc);
+ });
+
+ if(chartLinha)chartLinha.destroy();
+ if(chartBar)chartBar.destroy();
+
+ chartLinha=new Chart(chartLinhaEl,{
+  type:"line",
+  data:{labels,datasets:[{
+   data:saldo,
+   borderColor:"#22c55e",
+   tension:.35,
+   fill:true,
+   backgroundColor:"rgba(34,197,94,.18)"
+  }]},
+  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+ });
+
+ chartBar=new Chart(chartBarEl,{
+  type:"bar",
+  data:{labels:["Gain","Stop","0x0"],datasets:[{
+   data:[
+    f.reduce((a,b)=>a+b.gain,0),
+    f.reduce((a,b)=>a+b.stop,0),
+    f.reduce((a,b)=>a+b.zero,0)
+   ],
+   backgroundColor:["#22c55e","#ef4444","#facc15"],
+   borderRadius:12
+  }]},
+  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+ });
+}
+
 const chartLinhaEl=document.getElementById("chartLinha");
 const chartBarEl=document.getElementById("chartBar");
+
 loadCSV();
 </script>
 </body>
