--- a/index.html
+++ b/index.html
@@ -2,72 +2,205 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Dashboard - Mentoria NasdaqPro</title>
+<title>Dashboard NASDAQ PRO</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-*{box-sizing:border-box;font-family:Inter,Arial}
+:root{
+ --bg:#020617;
+ --card:#050b1a;
+ --border:rgba(255,255,255,.08);
+ --text:#e5e7eb;
+ --muted:#9ca3af;
+ --green:#22c55e;
+ --red:#ef4444;
+ --yellow:#facc15;
+ --blue:#93c5fd;
+}
+
+*{
+ box-sizing:border-box;
+ font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont;
+}
+
 body{
  margin:0;
- background:radial-gradient(circle at top,#0b1f4a,#050914);
- color:#fff;
+ background:radial-gradient(circle at top,#0b1f4d,#020617 70%);
+ color:var(--text);
 }
-.container{padding:30px}
-header img{height:70px}
-header h1{
- margin:10px 0 5px;
- font-size:36px;
- letter-spacing:2px;
-}
-.subtitle{color:#9fb3ff;margin-bottom:30px}
 
+.container{
+ max-width:1600px;
+ margin:auto;
+ padding:clamp(16px,2vw,28px);
+ animation:fadePage .6s ease;
+}
+
+/* ANIMAÇÕES */
+@keyframes fadeUp{
+ from{opacity:0; transform:translateY(14px)}
+ to{opacity:1; transform:translateY(0)}
+}
+@keyframes fadePage{
+ from{opacity:0}
+ to{opacity:1}
+}
+
+/* HEADER */
+.header{
+ display:flex;
+ flex-direction:column;
+ align-items:flex-start;
+ margin-bottom:36px;
+ animation:fadeUp .8s ease;
+}
+
+.header img{
+ height:84px;                 /* LOGO MAIOR */
+ max-width:100%;
+}
+
+.dashboard-title{
+ margin-top:20px;             /* MAIS ABAIXO */
+ font-size:22px;              /* TEXTO MAIOR */
+ letter-spacing:4px;
+ font-weight:900;
+ color:var(--blue);
+ opacity:.95;
+}
+
+/* FILTROS */
 .filters{
- display:flex;gap:15px;margin-bottom:25px
-}
-select{
- background:#070d1f;
- color:#fff;
- border:1px solid rgba(255,255,255,.1);
- padding:12px 16px;
- border-radius:14px;
- font-size:14px;
+ display:flex;
+ gap:12px;
+ margin-bottom:24px;
+ flex-wrap:wrap;
+ animation:fadeUp .9s ease;
 }
 
+select{
+ background:var(--card);
+ color:var(--text);
+ border:1px solid var(--border);
+ border-radius:14px;
+ padding:12px 16px;
+ font-size:15px;
+ width:220px;
+}
+
+select:disabled{opacity:.5}
+
+/* KPIs */
 .kpis{
  display:grid;
- grid-template-columns:repeat(6,1fr);
- gap:15px;
- margin-bottom:30px
+ grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
+ gap:16px;
+ margin-bottom:28px;
+ animation:fadeUp 1s ease;
 }
-.card{
- background:linear-gradient(145deg,#060c1f,#02040a);
+
+.kpi{
+ background:linear-gradient(180deg,#050b1a,#030818);
+ border:1px solid var(--border);
  border-radius:18px;
  padding:18px;
- box-shadow:0 10px 30px rgba(0,0,0,.4);
- animation:fadeUp .6s ease both;
 }
-.card span{font-size:13px;color:#aaa}
-.card strong{font-size:28px;margin-top:5px;display:block}
 
-.green{color:#1dd75f}
-.red{color:#ff4b4b}
-.yellow{color:#ffd000}
+.kpi span{
+ color:var(--muted);
+ font-size:13px;
+ text-transform:uppercase;
+}
 
-.charts{
+.kpi strong{
+ display:block;
+ margin-top:8px;
+ font-size:28px;
+}
+
+/* GRÁFICOS */
+.cards{
  display:grid;
- grid-template-columns:1fr 1fr;
- gap:20px
-}
-.chart-box{
- background:linear-gradient(145deg,#060c1f,#02040a);
- border-radius:20px;
- padding:20px;
- height:360px;
+ grid-template-columns:repeat(auto-fit,minmax(420px,1fr));
+ gap:16px;
+ margin-bottom:24px;
+ animation:fadeUp 1.1s ease;
 }
 
-@keyframes fadeUp{
- from{opacity:0;transform:translateY(10px)}
- to{opacity:1;transform:translateY(0)}
+.card{
+ background:linear-gradient(180deg,#050b1a,#030818);
+ border:1px solid var(--border);
+ border-radius:22px;
+ padding:18px;
+ height:clamp(320px,38vw,440px);
+ display:flex;
+ flex-direction:column;
+}
+
+.card strong{
+ margin-bottom:12px;
+ font-size:18px;
+}
+
+.chart-wrap{
+ flex:1;
+ position:relative;
+}
+
+canvas{
+ width:100%!important;
+ height:100%!important;
+}
+
+/* TABELA */
+.table-wrap{
+ overflow-x:auto;
+}
+
+table{
+ width:100%;
+ min-width:900px;
+ border-collapse:collapse;
+}
+
+thead{
+ background:linear-gradient(180deg,#020b2a,#020617);
+}
+
+th{
+ color:var(--blue);
+ font-weight:700;
+ font-size:17px;
+ padding:18px 12px;
+ text-align:center;
+}
+
+td{
+ padding:15px 12px;
+ border-bottom:1px solid var(--border);
+ font-size:15px;
+ text-align:center;
+}
+
+thead th:first-child,
+tbody td:first-child{
+ text-align:left;
+ padding-left:18px;
+}
+
+tr.total{
+ background:rgba(34,197,94,.08);
+ font-weight:700;
+}
+
+/* RESPONSIVO */
+@media(max-width:900px){
+ .cards{grid-template-columns:1fr}
+}
+
+@media(max-width:600px){
+ select{width:100%}
 }
 </style>
 </head>
@@ -75,99 +208,204 @@ select{
 <body>
 <div class="container">
 
-<header>
- <img src="logo.png" alt="Logo">
- <h1>DASHBOARD</h1>
- <div class="subtitle" id="subtitle"></div>
-</header>
+<!-- HEADER -->
+<div class="header">
+ <img src="logo.png" alt="Mentoria NasdaqPro">
+ <span class="dashboard-title">DASHBOARD</span>
+</div>
 
+<!-- FILTROS -->
 <div class="filters">
- <select id="ano">
-  <option>2025</option>
- </select>
- <select id="mes">
-  <option>Janeiro</option>
-  <option selected>Dezembro</option>
- </select>
- <select id="semana">
-  <option>Semana 1</option>
-  <option>Semana 2</option>
- </select>
+ <select id="filtroAno"></select>
+ <select id="filtroMes"></select>
+ <select id="filtroSemana"></select>
 </div>
 
+<!-- KPIs -->
 <div class="kpis">
- <div class="card"><span>TRADES</span><strong id="trades">11</strong></div>
- <div class="card"><span>PONTOS</span><strong id="pontos">228</strong></div>
- <div class="card"><span>GAINS</span><strong class="green" id="gains">7</strong></div>
- <div class="card"><span>STOPS</span><strong class="red" id="stops">3</strong></div>
- <div class="card"><span>0x0</span><strong class="yellow" id="zero">1</strong></div>
- <div class="card"><span>ASSERTIVIDADE</span><strong id="winrate">64%</strong></div>
+ <div class="kpi"><span>Trades</span><strong id="kTrades">0</strong></div>
+ <div class="kpi"><span>Pontos</span><strong id="kPontos">0</strong></div>
+ <div class="kpi"><span>Gains</span><strong id="kGains" style="color:var(--green)">0</strong></div>
+ <div class="kpi"><span>Stops</span><strong id="kStops" style="color:var(--red)">0</strong></div>
+ <div class="kpi"><span>0x0</span><strong id="kZero" style="color:var(--yellow)">0</strong></div>
+ <div class="kpi"><span>Assertividade</span><strong id="kAcc">0%</strong></div>
 </div>
 
-<div class="charts">
- <div class="chart-box">
-  <strong>Balanço de Pontos</strong>
-  <canvas id="linha"></canvas>
+<!-- GRÁFICOS -->
+<div class="cards">
+ <div class="card">
+  <strong>📈 Balanço de Pontos</strong>
+  <div class="chart-wrap"><canvas id="chartLinha"></canvas></div>
  </div>
+ <div class="card">
+  <strong>📊 Gains x Stops x 0x0</strong>
+  <div class="chart-wrap"><canvas id="chartBar"></canvas></div>
+ </div>
+</div>
 
- <div class="chart-box">
-  <strong>Gains x Stops x 0x0</strong>
-  <canvas id="barras"></canvas>
+<!-- TABELA -->
+<div class="card" style="height:auto">
+ <strong>Tabela Operacional</strong>
+ <div class="table-wrap">
+  <table>
+   <thead>
+    <tr>
+     <th>Dia</th>
+     <th>Pontos</th>
+     <th>Trades</th>
+     <th>Gain</th>
+     <th>Stop</th>
+     <th>0x0</th>
+     <th>Ativo</th>
+     <th>Semana</th>
+    </tr>
+   </thead>
+   <tbody id="tbody"></tbody>
+  </table>
  </div>
 </div>
 
 </div>
 
 <script>
-const dados={
- labels:["Seg","Ter","Qua","Qui","Sex"],
- saldo:[20,80,140,190,228],
- gains:7,stops:3,zero:1
-};
+const CSV_URL="https://docs.google.com/spreadsheets/d/e/2PACX-1vTbyybCny81vfVXQHmtlkKEOHHJ6xJ_pKSG_4ndkK0tH-YocrFeWY7qL41TS1IfvRQjLSbLIILV56OV/pub?output=csv";
+const nomesMeses={"01":"Janeiro","02":"Fevereiro","03":"Março","04":"Abril","05":"Maio","06":"Junho","07":"Julho","08":"Agosto","09":"Setembro","10":"Outubro","11":"Novembro","12":"Dezembro"};
+let data=[],chartLinha,chartBar;
 
-document.getElementById("subtitle").innerText=
- "2025 • Dezembro • Semana 1";
+async function loadCSV(){
+ const r=await fetch(CSV_URL,{cache:"no-store"});
+ const t=await r.text();
+ parseCSV(t);
+}
 
-new Chart(document.getElementById("linha"),{
- type:"line",
- data:{
-  labels:dados.labels,
-  datasets:[{
-   data:dados.saldo,
-   borderColor:"#3b6cff",
-   tension:.4,
-   fill:true,
-   backgroundColor:"rgba(59,108,255,.2)"
-  }]
- },
- options:{
-  responsive:true,
-  animation:{duration:1200,easing:"easeInOutQuart"},
-  plugins:{legend:{display:false}},
-  scales:{
-   x:{grid:{display:false}},
-   y:{grid:{color:"rgba(255,255,255,.05)"}}
+function parseCSV(t){
+ const rows=t.trim().split(/\r?\n/); rows.shift();
+ data=rows.map(r=>{
+  const c=r.split(",");
+  return{
+   dia:c[0], semana:c[1], ativo:c[2],
+   ano:c[0].substring(6,10), mes:c[0].substring(3,5),
+   pontos:+c[3]||0, trades:+c[4]||0,
+   gain:+c[5]||0, stop:+c[6]||0, zero:+c[7]||0
   }
- }
-});
+ });
+ initFiltros();
+}
 
-new Chart(document.getElementById("barras"),{
- type:"bar",
- data:{
-  labels:["Gains","Stops","0x0"],
-  datasets:[{
-   data:[dados.gains,dados.stops,dados.zero],
-   backgroundColor:["#1dd75f","#ff4b4b","#ffd000"]
-  }]
- },
- options:{
-  responsive:true,
-  animation:{duration:900,easing:"easeOutCubic"},
-  plugins:{legend:{display:false}},
-  scales:{y:{beginAtZero:true}}
+function initFiltros(){
+ const anos=[...new Set(data.map(d=>d.ano))].sort();
+ filtroAno.innerHTML=anos.map(a=>`<option>${a}</option>`).join("");
+ filtroAno.value=new Date().getFullYear();
+ filtroAno.onchange=()=>{initMeses();atualizar();}
+ initMeses();
+}
+
+function initMeses(){
+ const mesAtual=String(new Date().getMonth()+1).padStart(2,"0");
+ const meses=[...new Set(data.filter(d=>d.ano==filtroAno.value).map(d=>d.mes))];
+ filtroMes.innerHTML=`<option value="ALL">Todos os meses</option>`+
+ meses.map(m=>`<option value="${m}">${nomesMeses[m]}</option>`).join("");
+ filtroMes.value=meses.includes(mesAtual)?mesAtual:"ALL";
+ filtroMes.onchange=()=>{initSemanas();atualizar();}
+ initSemanas();
+}
+
+function initSemanas(){
+ if(filtroMes.value==="ALL"){
+  filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>';
+  filtroSemana.disabled=true;
+  atualizar();
+  return;
  }
-});
+ filtroSemana.disabled=false;
+ const semanas=[...new Set(data.filter(d=>d.ano==filtroAno.value && d.mes==filtroMes.value).map(d=>d.semana))];
+ filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>'+
+ semanas.map(s=>`<option>${s}</option>`).join("");
+ filtroSemana.value="ALL";
+ filtroSemana.onchange=atualizar;
+ atualizar();
+}
+
+function atualizar(){
+ const f=data.filter(d=>
+  d.ano==filtroAno.value &&
+  (filtroMes.value==="ALL"||d.mes==filtroMes.value) &&
+  (filtroSemana.value==="ALL"||d.semana==filtroSemana.value)
+ );
+ renderKPIs(f); renderTabela(f); renderGraficos(f);
+}
+
+function renderKPIs(f){
+ let t={trades:0,pontos:0,gain:0,stop:0,zero:0};
+ f.forEach(d=>{
+  t.trades+=d.trades; t.pontos+=d.pontos;
+  t.gain+=d.gain; t.stop+=d.stop; t.zero+=d.zero;
+ });
+ const ops=t.gain+t.stop;
+ kTrades.textContent=t.trades;
+ kPontos.textContent=t.pontos;
+ kGains.textContent=t.gain;
+ kStops.textContent=t.stop;
+ kZero.textContent=t.zero;
+ kAcc.textContent=ops?Math.round(t.gain/ops*100)+"%":"0%";
+}
+
+function renderTabela(f){
+ tbody.innerHTML="";
+ let tot={pontos:0,trades:0,gain:0,stop:0,zero:0};
+ f.forEach(d=>{
+  tot.pontos+=d.pontos; tot.trades+=d.trades;
+  tot.gain+=d.gain; tot.stop+=d.stop; tot.zero+=d.zero;
+  tbody.innerHTML+=`
+  <tr>
+   <td>${d.dia}</td>
+   <td style="color:${d.pontos<0?'var(--red)':'var(--green)'}">${d.pontos}</td>
+   <td>${d.trades}</td>
+   <td style="color:var(--green)">${d.gain}</td>
+   <td style="color:var(--red)">${d.stop}</td>
+   <td style="color:var(--yellow)">${d.zero}</td>
+   <td>${d.ativo}</td>
+   <td>${d.semana}</td>
+  </tr>`;
+ });
+ tbody.innerHTML+=`
+ <tr class="total">
+  <td>TOTAL</td>
+  <td>${tot.pontos}</td>
+  <td>${tot.trades}</td>
+  <td>${tot.gain}</td>
+  <td>${tot.stop}</td>
+  <td>${tot.zero}</td>
+  <td colspan="2"></td>
+ </tr>`;
+}
+
+function renderGraficos(f){
+ let acc=0; const labels=[],saldo=[];
+ f.forEach(d=>{ acc+=d.pontos; labels.push(d.dia); saldo.push(acc); });
+
+ if(chartLinha)chartLinha.destroy();
+ if(chartBar)chartBar.destroy();
+
+ chartLinha=new Chart(chartLinhaEl,{
+  type:"line",
+  data:{labels,datasets:[{data:saldo,borderColor:"#22c55e",tension:.35,fill:true,backgroundColor:"rgba(34,197,94,.18)"}]},
+  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+ });
+
+ chartBar=new Chart(chartBarEl,{
+  type:"bar",
+  data:{labels:["Gain","Stop","0x0"],datasets:[{
+   data:[f.reduce((a,b)=>a+b.gain,0),f.reduce((a,b)=>a+b.stop,0),f.reduce((a,b)=>a+b.zero,0)],
+   backgroundColor:["#22c55e","#ef4444","#facc15"],borderRadius:12
+  }]},
+  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+ });
+}
+
+const chartLinhaEl=document.getElementById("chartLinha");
+const chartBarEl=document.getElementById("chartBar");
+loadCSV();
 </script>
-
 </body>
 </html>
