--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ body{
 }
 
 .header img{
- height:84px;                 /* LOGO MAIOR */
+ height:84px;
  max-width:100%;
 }
 
 .dashboard-title{
- margin-top:20px;             /* MAIS ABAIXO */
- font-size:22px;              /* TEXTO MAIOR */
+ margin-top:20px;
+ font-size:22px;
  letter-spacing:4px;
  font-weight:900;
  color:var(--blue);
@@ -223,6 +223,7 @@ tr.total{
 
 <!-- KPIs -->
 <div class="kpis">
+ <div class="kpi"><span>Dias Operados</span><strong id="kDias">0</strong></div>
  <div class="kpi"><span>Trades</span><strong id="kTrades">0</strong></div>
  <div class="kpi"><span>Pontos</span><strong id="kPontos">0</strong></div>
  <div class="kpi"><span>Gains</span><strong id="kGains" style="color:var(--green)">0</strong></div>
@@ -337,11 +338,19 @@ function atualizar(){
 
 function renderKPIs(f){
  let t={trades:0,pontos:0,gain:0,stop:0,zero:0};
+ const diasOperados=new Set(f.map(d=>d.dia)).size;
+
  f.forEach(d=>{
-  t.trades+=d.trades; t.pontos+=d.pontos;
-  t.gain+=d.gain; t.stop+=d.stop; t.zero+=d.zero;
+  t.trades+=d.trades; 
+  t.pontos+=d.pontos;
+  t.gain+=d.gain; 
+  t.stop+=d.stop; 
+  t.zero+=d.zero;
  });
+
  const ops=t.gain+t.stop;
+
+ kDias.textContent=diasOperados;
  kTrades.textContent=t.trades;
  kPontos.textContent=t.pontos;
  kGains.textContent=t.gain;
@@ -381,23 +390,51 @@ function renderTabela(f){
 }
 
 function renderGraficos(f){
- let acc=0; const labels=[],saldo=[];
- f.forEach(d=>{ acc+=d.pontos; labels.push(d.dia); saldo.push(acc); });
+ let acc=0;
+ const labels=[],saldo=[];
+ f.forEach(d=>{
+  acc+=d.pontos;
+  labels.push(d.dia);
+  saldo.push(acc);
+ });
+
+ const maxSaldo=Math.max(0,...saldo);
 
  if(chartLinha)chartLinha.destroy();
  if(chartBar)chartBar.destroy();
 
  chartLinha=new Chart(chartLinhaEl,{
   type:"line",
-  data:{labels,datasets:[{data:saldo,borderColor:"#22c55e",tension:.35,fill:true,backgroundColor:"rgba(34,197,94,.18)"}]},
-  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+  data:{labels,datasets:[{
+   data:saldo,
+   borderColor:"#22c55e",
+   tension:.35,
+   fill:true,
+   backgroundColor:"rgba(34,197,94,.18)"
+  }]},
+  options:{
+   responsive:true,
+   maintainAspectRatio:false,
+   plugins:{legend:{display:false}},
+   scales:{
+    y:{
+     min:0,
+     max:maxSaldo
+    }
+   }
+  }
  });
 
  chartBar=new Chart(chartBarEl,{
   type:"bar",
   data:{labels:["Gain","Stop","0x0"],datasets:[{
-   data:[f.reduce((a,b)=>a+b.gain,0),f.reduce((a,b)=>a+b.stop,0),f.reduce((a,b)=>a+b.zero,0)],
-   backgroundColor:["#22c55e","#ef4444","#facc15"],borderRadius:12
+   data:[
+    f.reduce((a,b)=>a+b.gain,0),
+    f.reduce((a,b)=>a+b.stop,0),
+    f.reduce((a,b)=>a+b.zero,0)
+   ],
+   backgroundColor:["#22c55e","#ef4444","#facc15"],
+   borderRadius:12
   }]},
   options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
  });
