--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ body{
 }
 
 .header img{
- height:84px;
+ height:84px;                 /* LOGO MAIOR */
  max-width:100%;
 }
 
 .dashboard-title{
- margin-top:20px;
- font-size:22px;
+ margin-top:20px;             /* MAIS ABAIXO */
+ font-size:22px;              /* TEXTO MAIOR */
  letter-spacing:4px;
  font-weight:900;
  color:var(--blue);
@@ -133,6 +133,7 @@ select:disabled{opacity:.5}
  border:1px solid var(--border);
  border-radius:22px;
  padding:18px;
+ height:clamp(320px,38vw,440px);
  display:flex;
  flex-direction:column;
 }
@@ -152,11 +153,9 @@ canvas{
  height:100%!important;
 }
 
-/* ===== TABELA OPERACIONAL (MELHORADA) ===== */
+/* TABELA */
 .table-wrap{
- overflow:auto;
- max-height:420px;
- border-radius:14px;
+ overflow-x:auto;
 }
 
 table{
@@ -166,35 +165,22 @@ table{
 }
 
 thead{
- position:sticky;
- top:0;
- z-index:2;
  background:linear-gradient(180deg,#020b2a,#020617);
 }
 
 th{
  color:var(--blue);
  font-weight:700;
- font-size:16px;
- padding:16px 12px;
+ font-size:17px;
+ padding:18px 12px;
  text-align:center;
- border-bottom:1px solid var(--border);
 }
 
 td{
- padding:14px 12px;
+ padding:15px 12px;
  border-bottom:1px solid var(--border);
  font-size:15px;
  text-align:center;
-}
-
-tbody tr:nth-child(even){
- background:rgba(255,255,255,.02);
-}
-
-tbody tr:hover{
- background:rgba(147,197,253,.08);
- cursor:pointer;
 }
 
 thead th:first-child,
@@ -204,8 +190,8 @@ tbody td:first-child{
 }
 
 tr.total{
- background:linear-gradient(90deg,rgba(34,197,94,.18),rgba(34,197,94,.05));
- font-weight:800;
+ background:rgba(34,197,94,.08);
+ font-weight:700;
 }
 
 /* RESPONSIVO */
@@ -222,17 +208,20 @@ tr.total{
 <body>
 <div class="container">
 
+<!-- HEADER -->
 <div class="header">
  <img src="logo.png" alt="Mentoria NasdaqPro">
  <span class="dashboard-title">DASHBOARD</span>
 </div>
 
+<!-- FILTROS -->
 <div class="filters">
  <select id="filtroAno"></select>
  <select id="filtroMes"></select>
  <select id="filtroSemana"></select>
 </div>
 
+<!-- KPIs -->
 <div class="kpis">
  <div class="kpi"><span>Trades</span><strong id="kTrades">0</strong></div>
  <div class="kpi"><span>Pontos</span><strong id="kPontos">0</strong></div>
@@ -242,19 +231,21 @@ tr.total{
  <div class="kpi"><span>Assertividade</span><strong id="kAcc">0%</strong></div>
 </div>
 
+<!-- GRÁFICOS -->
 <div class="cards">
- <div class="card" style="height:420px">
+ <div class="card">
   <strong>📈 Balanço de Pontos</strong>
   <div class="chart-wrap"><canvas id="chartLinha"></canvas></div>
  </div>
- <div class="card" style="height:420px">
+ <div class="card">
   <strong>📊 Gains x Stops x 0x0</strong>
   <div class="chart-wrap"><canvas id="chartBar"></canvas></div>
  </div>
 </div>
 
-<div class="card">
- <strong>📋 Tabela Operacional</strong>
+<!-- TABELA -->
+<div class="card" style="height:auto">
+ <strong>Tabela Operacional</strong>
  <div class="table-wrap">
   <table>
    <thead>
@@ -277,12 +268,144 @@ tr.total{
 </div>
 
 <script>
-/* JS ORIGINAL PRESERVADO */
 const CSV_URL="https://docs.google.com/spreadsheets/d/e/2PACX-1vTbyybCny81vfVXQHmtlkKEOHHJ6xJ_pKSG_4ndkK0tH-YocrFeWY7qL41TS1IfvRQjLSbLIILV56OV/pub?output=csv";
 const nomesMeses={"01":"Janeiro","02":"Fevereiro","03":"Março","04":"Abril","05":"Maio","06":"Junho","07":"Julho","08":"Agosto","09":"Setembro","10":"Outubro","11":"Novembro","12":"Dezembro"};
 let data=[],chartLinha,chartBar;
 
-/* restante do JS permanece igual */
+async function loadCSV(){
+ const r=await fetch(CSV_URL,{cache:"no-store"});
+ const t=await r.text();
+ parseCSV(t);
+}
+
+function parseCSV(t){
+ const rows=t.trim().split(/\r?\n/); rows.shift();
+ data=rows.map(r=>{
+  const c=r.split(",");
+  return{
+   dia:c[0], semana:c[1], ativo:c[2],
+   ano:c[0].substring(6,10), mes:c[0].substring(3,5),
+   pontos:+c[3]||0, trades:+c[4]||0,
+   gain:+c[5]||0, stop:+c[6]||0, zero:+c[7]||0
+  }
+ });
+ initFiltros();
+}
+
+function initFiltros(){
+ const anos=[...new Set(data.map(d=>d.ano))].sort();
+ filtroAno.innerHTML=anos.map(a=>`<option>${a}</option>`).join("");
+ filtroAno.value=new Date().getFullYear();
+ filtroAno.onchange=()=>{initMeses();atualizar();}
+ initMeses();
+}
+
+function initMeses(){
+ const mesAtual=String(new Date().getMonth()+1).padStart(2,"0");
+ const meses=[...new Set(data.filter(d=>d.ano==filtroAno.value).map(d=>d.mes))];
+ filtroMes.innerHTML=`<option value="ALL">Todos os meses</option>`+
+ meses.map(m=>`<option value="${m}">${nomesMeses[m]}</option>`).join("");
+ filtroMes.value=meses.includes(mesAtual)?mesAtual:"ALL";
+ filtroMes.onchange=()=>{initSemanas();atualizar();}
+ initSemanas();
+}
+
+function initSemanas(){
+ if(filtroMes.value==="ALL"){
+  filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>';
+  filtroSemana.disabled=true;
+  atualizar();
+  return;
+ }
+ filtroSemana.disabled=false;
+ const semanas=[...new Set(data.filter(d=>d.ano==filtroAno.value && d.mes==filtroMes.value).map(d=>d.semana))];
+ filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>'+
+ semanas.map(s=>`<option>${s}</option>`).join("");
+ filtroSemana.value="ALL";
+ filtroSemana.onchange=atualizar;
+ atualizar();
+}
+
+function atualizar(){
+ const f=data.filter(d=>
+  d.ano==filtroAno.value &&
+  (filtroMes.value==="ALL"||d.mes==filtroMes.value) &&
+  (filtroSemana.value==="ALL"||d.semana==filtroSemana.value)
+ );
+ renderKPIs(f); renderTabela(f); renderGraficos(f);
+}
+
+function renderKPIs(f){
+ let t={trades:0,pontos:0,gain:0,stop:0,zero:0};
+ f.forEach(d=>{
+  t.trades+=d.trades; t.pontos+=d.pontos;
+  t.gain+=d.gain; t.stop+=d.stop; t.zero+=d.zero;
+ });
+ const ops=t.gain+t.stop;
+ kTrades.textContent=t.trades;
+ kPontos.textContent=t.pontos;
+ kGains.textContent=t.gain;
+ kStops.textContent=t.stop;
+ kZero.textContent=t.zero;
+ kAcc.textContent=ops?Math.round(t.gain/ops*100)+"%":"0%";
+}
+
+function renderTabela(f){
+ tbody.innerHTML="";
+ let tot={pontos:0,trades:0,gain:0,stop:0,zero:0};
+ f.forEach(d=>{
+  tot.pontos+=d.pontos; tot.trades+=d.trades;
+  tot.gain+=d.gain; tot.stop+=d.stop; tot.zero+=d.zero;
+  tbody.innerHTML+=`
+  <tr>
+   <td>${d.dia}</td>
+   <td style="color:${d.pontos<0?'var(--red)':'var(--green)'}">${d.pontos}</td>
+   <td>${d.trades}</td>
+   <td style="color:var(--green)">${d.gain}</td>
+   <td style="color:var(--red)">${d.stop}</td>
+   <td style="color:var(--yellow)">${d.zero}</td>
+   <td>${d.ativo}</td>
+   <td>${d.semana}</td>
+  </tr>`;
+ });
+ tbody.innerHTML+=`
+ <tr class="total">
+  <td>TOTAL</td>
+  <td>${tot.pontos}</td>
+  <td>${tot.trades}</td>
+  <td>${tot.gain}</td>
+  <td>${tot.stop}</td>
+  <td>${tot.zero}</td>
+  <td colspan="2"></td>
+ </tr>`;
+}
+
+function renderGraficos(f){
+ let acc=0; const labels=[],saldo=[];
+ f.forEach(d=>{ acc+=d.pontos; labels.push(d.dia); saldo.push(acc); });
+
+ if(chartLinha)chartLinha.destroy();
+ if(chartBar)chartBar.destroy();
+
+ chartLinha=new Chart(chartLinhaEl,{
+  type:"line",
+  data:{labels,datasets:[{data:saldo,borderColor:"#22c55e",tension:.35,fill:true,backgroundColor:"rgba(34,197,94,.18)"}]},
+  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+ });
+
+ chartBar=new Chart(chartBarEl,{
+  type:"bar",
+  data:{labels:["Gain","Stop","0x0"],datasets:[{
+   data:[f.reduce((a,b)=>a+b.gain,0),f.reduce((a,b)=>a+b.stop,0),f.reduce((a,b)=>a+b.zero,0)],
+   backgroundColor:["#22c55e","#ef4444","#facc15"],borderRadius:12
+  }]},
+  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+ });
+}
+
+const chartLinhaEl=document.getElementById("chartLinha");
+const chartBarEl=document.getElementById("chartBar");
+loadCSV();
 </script>
 </body>
 </html>
